페이퍼플 ver.0.0.5 (2024-09-11) (#21)
* [feat/#9] 페이퍼 기능 추가 (#1)

* [FEAT] Paper entity 추가 (#9)

* [FEAT] PaperController 추가 (#9)

* [FEAT] PaperRequest 추가 (#9)

* [FEAT] PaperResponse 추가 (#9)

* [FEAT] PaperRepository 추가 (#9)

* [FEAT] PaperService 추가 (#9)

* [FEAT] PaperControllerTest 및 api 문서 작업 완료 (#9)

* Squashed commit of the following:

commit dde69986f12dcc47d20807ab43c0c4b13f1bf98c
Author: Yoonho Hann <83288181+hnnynh@users.noreply.github.com>
Date:   Fri Aug 16 17:49:14 2024 +0900

    chore: Update Jenkinsfile

    이미지 태그 변경

commit 89145abd85afa4e2f823679a20cab4d69d6ffd6d
Merge: cf7fcd4 1ce374d
Author: hnn.ynh <hnnynh125@gmail.com>
Date:   Wed Aug 14 15:11:33 2024 +0900

    Merge branch 'main' of https://github.com/lunch-12/PAPERPLE-BE

commit cf7fcd479c6092640d4f750f6c2158469f0c9a4a
Merge: c0a26c0 1df0116
Author: hnn.ynh <hnnynh125@gmail.com>
Date:   Wed Aug 14 15:11:20 2024 +0900

    ci: jenkins ci 세팅 및 슬랙 알림 설정

commit 1ce374d0464d19222e368f2ec8ab6a788ebca994
Author: Yoonho Hann <83288181+hnnynh@users.noreply.github.com>
Date:   Tue Aug 13 17:06:39 2024 +0900

    fix: Dockerfile 플랫폼 종속성 해결

commit c0a26c0244227f94730a323a3f0980567527fb23
Author: hnn.ynh <hnnynh125@gmail.com>
Date:   Thu Aug 8 00:02:44 2024 +0900

    feat: Add Dockerfile

    Docker 이미지 패키징

commit 1df0116336b20c403eed0c4e580590a8cd9feee7
Author: hnn.ynh <hnnynh125@gmail.com>
Date:   Thu Aug 8 00:02:44 2024 +0900

    feat: Add Dockerfile

    Docker 이미지 패키징

* [REFACTOR] view default 값 추가 (#9)

* [REFACTOR] 어노테이션 삭제 (#9)

* [feat/#10] 페이퍼 좋아요 기능 추가 (#2)

* Squashed commit of the following:

commit 64bed774c52b7a1646e91811be7bc623f67d635c
Author: SSUHYUNKIM <43875264+SSUHYUNKIM@users.noreply.github.com>
Date:   Sun Aug 18 18:49:03 2024 +0900

    [feat/#9] 페이퍼 기능 추가 (#1)

    * [FEAT] Paper entity 추가 (#9)

    * [FEAT] PaperController 추가 (#9)

    * [FEAT] PaperRequest 추가 (#9)

    * [FEAT] PaperResponse 